--- a/src/styles/homeStyle.css
+++ b/src/styles/homeStyle.css
@@ -1,4 +1,7 @@
 /* styles.css */
+
+@import url("https://fonts.googleapis.com/css2?family=REM:ital,wght@0,100..900;1,100..900&display=swap");
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -8,6 +11,7 @@
 .bodyHomepage {
   width: 100%;
   height: 100vh;
+  font-family: "REM", sans-serif;
 }
 
 .homepage {
@@ -19,12 +23,53 @@
 .mainSideBar {
   width: 20%;
   height: 100%;
-  background-color: #ffcc9d7e;
-  padding: 40px;
+  background-color: #e0883652;
+  padding: 25px;
 }
 
 .mainContent {
   width: 80%;
   height: 100%;
-  padding: 40px;
+  padding: 25px;
+}
+
+.homeSideBarHeaderContainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: rgba(0, 0, 0, 0.5);
+  
+  padding: 10px;
+  border-radius: 10px;
+  margin-bottom: 20px;
+}
+
+.homeSideBarHeaderInfo h1 {
+  font-size: 1.5rem;
+  color: #fff;
+  margin-left: 5px;
+}
+
+.homeSideBarHeaderInfo {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.homeSideBarHeaderIcons {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+img {
+  filter: brightness(0) invert(1);
+}
+
+.homeProfilePicture {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin-right: 10px;
+  filter: brightness(1) invert(0);
 }
