--- a/src/styles/homeStyle.css
+++ b/src/styles/homeStyle.css
@@ -8,7 +8,7 @@
   --background-color: #dadada63;
   --sidebar-header-background-color: rgba(0, 0, 0, 0.5);
   --sidebar-item-background-color: rgba(0, 0, 0, 0.6);
-  --sidebar-maincontent-padding: 30px;
+  --sidebar-maincontent-padding: 25px;
 }
 
 * {
@@ -18,6 +18,7 @@
 }
 
 .bodyHomepage {
+  overflow: hidden;
   width: 100%;
   height: 100vh;
   font-family: "REM", sans-serif;
@@ -34,6 +35,7 @@
   height: 100%;
   background-color: var(--sidebar-color);
   padding: var(--sidebar-maincontent-padding);
+
 }
 
 .mainContent {
@@ -49,12 +51,15 @@
   justify-content: space-between;
   background-color: var(--sidebar-header-background-color);
   flex-wrap: wrap;
-
+  margin-bottom: 50px;
   padding: 10px;
   border-radius: 10px;
-  margin-bottom: 50px;
   border-bottom: 2px solid white;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+}
+
+.homeSideBarHeader {
+  padding: 5px;
 }
 
 .homeSideBarHeaderInfo h1 {
@@ -106,10 +111,17 @@ img {
     box-shadow 0.2s ease-in-out;
 }
 
+.sideBarHeader {
+  height: 88vh;
+  overflow: hidden;
+}
+
 .homeSideBarItems {
   display: flex;
   flex-direction: column;
   gap: 15px;
+  scrollbar-width: thin;
+  padding: 5px;
 }
 
 .homeSidebarItemText {
