--- a/src/styles/homeStyle.css
+++ b/src/styles/homeStyle.css
@@ -112,8 +112,7 @@ img {
 }
 
 .sideBarHeader {
-  height: 88vh;
-  overflow: hidden;
+  height: 100%;
 }
 
 .homeSideBarItems {
@@ -140,4 +139,20 @@ img {
 .homeSidebarItemIconContainer {
   display: flex;
   position: absolute;
+}
+
+.homeSideBarFooter {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  color: rgb(255, 255, 255);
+  margin-top: 1.5em;
+  border-top: 1px solid rgba(255, 255, 255, 0.418);
+  padding: 10px; 
+}
+
+a {
+  text-decoration: none;
+  color: var(--primary-color);
 }
