--- a/src/styles/homeStyle.css
+++ b/src/styles/homeStyle.css
@@ -8,7 +8,7 @@
   --background-color: #dadada63;
   --sidebar-header-background-color: rgba(0, 0, 0, 0.5);
   --sidebar-item-background-color: rgba(0, 0, 0, 0.6);
-  --sidebar-maincontent-padding: 25px;
+  --sidebar-maincontent-padding: 20px;
 }
 
 * {
@@ -51,7 +51,7 @@
   justify-content: space-between;
   background-color: var(--sidebar-header-background-color);
   flex-wrap: wrap;
-  margin-bottom: 50px;
+  margin-bottom: 40px;
   padding: 10px;
   border-radius: 10px;
   border-bottom: 2px solid white;
@@ -112,6 +112,8 @@ img {
 }
 
 .sideBarHeader {
+  display: flex;
+  flex-direction: column;
   height: 100%;
 }
 
@@ -147,9 +149,9 @@ img {
   justify-content: center;
   gap: 5px;
   color: rgb(255, 255, 255);
-  margin-top: 1.5em;
   border-top: 1px solid rgba(255, 255, 255, 0.418);
-  padding: 10px; 
+  padding: 10px 5px 5px 5px; 
+  margin-top: auto;
 }
 
 a {
