--- a/src/styles/homeStyle.css
+++ b/src/styles/homeStyle.css
@@ -5,7 +5,7 @@
 :root {
   --primary-color: #934bf1f1;
   --sidebar-color: #222222fa;
-  --background-color: #dadada63;
+  --background-color: #000000de;
   --sidebar-header-background-color: rgba(0, 0, 0, 0.5);
   --sidebar-item-background-color: rgba(0, 0, 0, 0.6);
   --sidebar-maincontent-padding: 20px;
@@ -157,4 +157,23 @@ img {
 a {
   text-decoration: none;
   color: var(--primary-color);
+}
+
+
+.homeMainContent {
+  padding-top: 10px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.homeMainContent h2 {
+  color: var(--primary-color);
+  font-size: 1.5rem;
+  margin-bottom: 20px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.418);
+  padding-bottom: 10px;
 }
