--- a/src/styles/homeStyle.css
+++ b/src/styles/homeStyle.css
@@ -177,3 +177,22 @@ a {
   border-bottom: 1px solid rgba(255, 255, 255, 0.418);
   padding-bottom: 10px;
 }
+
+.homeMainContentBody > p {
+  padding-top: 10px;
+  color: rgba(255, 255, 255, 0.8);
+  font-size: 1.2rem;
+  margin-bottom: 20px;
+}
+
+.projectTaskItem p {
+  color: rgb(255, 255, 255);
+  font-size: 1.1rem;
+  margin-bottom: 20px;
+}
+
+.projectTaskItem h3 {
+  color: var(--primary-color);
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+}
