--- a/src/styles/homeStyle.css
+++ b/src/styles/homeStyle.css
@@ -170,12 +170,11 @@ a {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-
 }
 
 .homeMainContent::-webkit-scrollbar {
-  width: 5px; 
-  height: 5px; 
+  width: 5px;
+  height: 5px;
 }
 
 .homeMainContent::-webkit-scrollbar-track {
@@ -183,7 +182,7 @@ a {
 }
 
 .homeMainContent::-webkit-scrollbar-thumb {
-  background-color: var(--primary-color); 
+  background-color: var(--primary-color);
   border-radius: 10px;
 }
 
@@ -195,7 +194,7 @@ a {
   border: none;
   padding: 0;
   margin: 0;
-  overflow: hidden; 
+  overflow: hidden;
 }
 
 .homeMainContentHeader h2 {
@@ -238,8 +237,10 @@ a {
   flex-direction: column;
   width: 350px;
   background-color: rgba(255, 255, 255, 0.05);
-  padding: 20px;
+
   border-radius: 10px;
+  max-height: 98.5%;
+  overflow: hidden;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
   transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
   border-left: 5px solid var(--task-item-default-color);
@@ -254,7 +255,7 @@ a {
   padding: 10px;
   margin-top: 20px;
   width: 100%;
-  
+
   display: grid;
   grid-auto-flow: column;
   grid-auto-columns: max-content;
@@ -264,13 +265,31 @@ a {
   flex-grow: 1;
   min-height: 0;
   overflow-x: auto;
+  overflow-y: hidden;
   scrollbar-width: thin;
   scrollbar-color: var(--primary-color) transparent;
-
 }
 
 .homepage {
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
+}
+
+.projectItemContainer:hover {
+  scrollbar-color: var(--primary-color) transparent;
+}
+
+.projectItemContainer {
+  padding: 0 20px;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  overflow-y: auto;
+  scrollbar-width: thin;
+  scrollbar-color: transparent transparent;
+}
+
+.projectTaskItemHeader {
+  padding: 15px 20px 0 20px;
 }
