--- a/src/styles/homeStyle.css
+++ b/src/styles/homeStyle.css
@@ -372,7 +372,35 @@ a {
 
 .homeAddProjectButton {
   background-color: rgba(0, 0, 0, 0.6) !important;
-  box-shadow: rgba(37, 7, 58, 0.288) 0px 2px 15px,
-    rgba(0, 0, 0, 0) 0px 20px 5px;
+  box-shadow: rgba(37, 7, 58, 0.288) 0px 2px 15px, rgba(0, 0, 0, 0) 0px 20px 5px;
   border: 3px solid rgba(119, 0, 255, 0.089);
+}
+
+.projectTaskHeaderContainer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.deleteTaskIcon {
+  padding: 1px;
+  width: 22px;
+  align-items: flex-start;
+  max-height: 22px;
+  cursor: pointer;
+  background-color: #ffffff0e;
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0) 0px 0.5px 7px;
+  display: none;
+
+  transform: scale(1) translateY(0);
+
+  transition: background-color 0.2s ease-in-out, transform 0.2s ease-in-out,
+    box-shadow 0.2s ease-in-out;
+}
+.deleteTaskIcon:hover {
+  transform: scale(1.03) translateY(-2px);
+}
+
+.projectTaskDetails:hover .deleteTaskIcon {
+  display: inline-block;
 }
