--- a/src/styles/homeStyle.css
+++ b/src/styles/homeStyle.css
@@ -208,7 +208,7 @@ a {
 .projectTaskItemHeader h2 {
   color: var(--primary-color);
   font-size: 1.43rem;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.418);
+ 
   padding-bottom: 10px;
 }
 
@@ -295,7 +295,12 @@ a {
 }
 
 .projectTaskItemHeader {
-  padding: 15px 20px 0 20px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  padding-top: 15px;
+  margin: 0 20px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.418);
 }
 
 .addTaskButton {
@@ -345,6 +350,7 @@ a {
   justify-content: center;
   gap: 10px;
   padding: 15px !important;
+  border-bottom: none !important;
 }
 
 .homeMainAddTaskList {
@@ -398,9 +404,18 @@ a {
     box-shadow 0.2s ease-in-out;
 }
 .deleteTaskIcon:hover {
-  transform: scale(1.03) translateY(-2px);
+    transform: scale(1.03) translateY(-2px);
 }
 
 .projectTaskDetails:hover .deleteTaskIcon {
+  display: inline-block;
+}
+
+.deleteTaskListIcon {
+  display: none;
+  margin-top: 2px;
+}
+
+.projectTaskItem:hover .deleteTaskListIcon {
   display: inline-block;
 }
