Created Logic to delete Projects

--- a/src/styles/homeStyle.css
+++ b/src/styles/homeStyle.css
@@ -142,8 +142,31 @@ img {
 }
 
 .homeSidebarItemIconContainer {
+  width: 95%;
   display: flex;
   position: absolute;
+  justify-content: space-between;
+}
+
+.deleteProjectIcon {
+  padding: 1px;
+  width: 22px;
+  align-items: flex-start;
+  max-height: 22px;
+  cursor: pointer;
+  background-color: #ffffff00;
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 0.5px 7px;
+  display: none;
+
+  transform: scale(1) translateY(0);
+
+  transition: background-color 0.2s ease-in-out, transform 0.2s ease-in-out,
+    box-shadow 0.2s ease-in-out;
+}
+
+.homeSideBarItem:hover .deleteProjectIcon {
+  display: inline-block;
 }
 
 .homeSideBarFooter {
@@ -208,7 +231,7 @@ a {
 .projectTaskItemHeader h2 {
   color: var(--primary-color);
   font-size: 1.43rem;
- 
+
   padding-bottom: 10px;
 }
 
@@ -404,7 +427,7 @@ a {
     box-shadow 0.2s ease-in-out;
 }
 .deleteTaskIcon:hover {
-    transform: scale(1.03) translateY(-2px);
+  transform: scale(1.03) translateY(-2px);
 }
 
 .projectTaskDetails:hover .deleteTaskIcon {
