--- a/src/styles/homeStyle.css
+++ b/src/styles/homeStyle.css
@@ -565,3 +565,18 @@ a {
   background: #2c313a;
   box-shadow: 0 0 0;
 }
+
+.modalButtonContainer {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+.modalButtonContainer > .modalAddButton {
+  color: var(--task-item-completed-color) !important;
+}
+
+.modalButtonContainer > .modalCancelButton {
+  color: var(--task-item-overdue-color) !important;
+}
